--- a/tests.ipynb
+++ b/tests.ipynb
@@ -22,10 +22,8 @@
    "source": [
     "with requests.session() as s:\n",
     "\n",
-    "    login_info = {\n",
-    "        'login_email': 'murillo.stein@bixtecnologia.com.br',\n",
-    "        'login_password': 'Murillo8'\n",
-    "    }\n",
+    "    credentials = open('credentials.json')\n",
+    "    login_info = json.load(credentials)\n",
     "    login_url = 'https://app.feedz.com.br/autenticacao/login'\n",
     "\n",
     "    s.post(login_url, data=login_info)"
